--- a/dev/proto/ui_catalog/assets/scss/common/pointer_event.scss
+++ b/dev/proto/ui_catalog/assets/scss/common/pointer_event.scss
@@ -2,7 +2,9 @@
 //	Pointer event
 //------------------------------------------------------------------------------
 
-.pointer_event_none
+@use "../functions/responsive" as responsive;
+
+@include responsive.responsive("pointer_event_none")
 {
     pointer-events: none;
 }
