--- a/dev/proto/ui_catalog/assets/scss/variables/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/index.scss
@@ -8,6 +8,7 @@
 //	overriding each custom property.
 //------------------------------------------------------------------------------
 
+@forward "breakpoints";
 @forward "colors";
 @forward "fonts";
 @forward "icons";
