--- a/dev/proto/ui_catalog/assets/scss/common/flex.scss
+++ b/dev/proto/ui_catalog/assets/scss/common/flex.scss
@@ -2,7 +2,9 @@
 //	Flex
 //------------------------------------------------------------------------------
 
-.flex
+@use "../functions/responsive" as responsive;
+
+@include responsive.responsive("flex")
 {
 	display: flex;
 
@@ -75,7 +77,7 @@
 	> .flex_shrink { flex-shrink: 1; }
 }
 
-.flex_spacer
+@include responsive.responsive("flex_spacer")
 {
 	flex-grow: 1;
 }
