--- a/dev/system/auth/core/templates/login.html
+++ b/dev/system/auth/core/templates/login.html
@@ -3,21 +3,27 @@
 {% block title %}{{ t!("pages.login.title") }}{% endblock %}
 
 {% block content %}
- <div class="flex_grow flex flex_column flex_align_center flex_justify_center padding_xl">
-  <div class="min_width_10xl flex flex_column">
-   <div class="ui_box surface radius_md padding_4xl flex flex_column flex_align_center flex_gap_xl">
-    <h1 class="ui_heading h1 text_align_center text_bold margin_bottom">{{ t!("pages.login.heading") }}</h1>
-    <form method="POST" class="flex flex_column flex_gap_2xl flex_align_center width_8xl">
-     <input type="email" name="email" placeholder="{{ t!("pages.login.form.email.placeholder") }}" value="{{ input.email }}" class="ui_text_field width_full padding_horizontal_sm">
-     {% if input_error.email.is_some() %}
-      <div class="ui_alert filled error">{{ input_error.email.as_ref().unwrap() }}</div>
-     {% endif %}
-     <input type="password" name="password" placeholder="{{ t!("pages.login.form.password.placeholder") }}" class="ui_text_field width_full padding_horizontal_sm">
-     {% if input_error.password.is_some() %}
-      <div class="ui_alert filled error">{{ input_error.password.as_ref().unwrap() }}</div>
-     {% endif %}
+ <div class="flex_grow flex flex_column flex_align_center flex_justify_center padding_xl mobile:padding_md">
+  <div class="min_width_10xl flex flex_column tablet:min_width_zero tablet:width_full mobile:min_width_zero mobile:width_full">
+   <div class="ui_box surface radius_md padding_4xl flex flex_column flex_align_center flex_gap_xl mobile:padding_2xl mobile:padding_vertical_3xl">
+    <h1 class="ui_heading h1 text_align_center text_bold">{{ t!("pages.login.heading") }}</h1>
+    <form method="POST" class="flex flex_column flex_gap_2xl flex_align_center max_width_8xl width_full">
+     <label class="flex flex_column flex_align_start width_full">
+      <span class="padding_horizontal_sm fs_sm">{{ t!("pages.login.form.email.label") }}</span>
+      <input type="email" name="email" placeholder="{{ t!("pages.login.form.email.placeholder") }}" class="ui_text_field width_full padding_horizontal_sm{% if input_error.email.is_some() %} is_error{% endif %}"{% if input_error.email.is_none() %} value="{{ input.email }}"{% endif %}>
+      {% if input_error.email.is_some() %}
+       <div class="color_error margin_top_sm">{{ input_error.email.as_ref().unwrap() }}</div>
+      {% endif %}
+     </label>
+     <label class="flex flex_column flex_align_start width_full">
+      <span class="padding_horizontal_sm fs_sm">{{ t!("pages.login.form.password.label") }}</span>
+      <input type="password" name="password" placeholder="{{ t!("pages.login.form.password.placeholder") }}" class="ui_text_field width_full padding_horizontal_sm{% if input_error.password.is_some() %} is_error{% endif %}">
+      {% if input_error.password.is_some() %}
+       <div class="color_error margin_top_sm">{{ input_error.password.as_ref().unwrap() }}</div>
+      {% endif %}
+     </label>
      {% if input_error.other.is_some() %}
-      <div class="ui_alert filled error">{{ input_error.other.as_ref().unwrap() }}</div>
+      <div class="color_error margin_top_sm">{{ input_error.other.as_ref().unwrap() }}</div>
      {% endif %}
      <div class="flex flex_column flex_align_center flex_gap_md">
       <button type="submit" class="ui_button primary full_rounded width_7xl text_align_center">{{ t!("pages.login.form.button.submit") }}</button>
