--- a/dev/system/auth/core/templates/bad_request.html
+++ b/dev/system/auth/core/templates/bad_request.html
@@ -4,9 +4,9 @@
 
 
 {% block content %}
- <div class="flex_grow flex flex_column flex_align_center flex_justify_center padding_xl">
-  <div class="min_width_10xl flex flex_column">
-   <h1 class="ui_heading h1 text_align_center">{{ t!("pages.bad_request.heading") }}</h1>
+ <div class="flex_grow flex flex_column flex_align_center flex_justify_center padding_xl mobile:padding_md">
+  <div class="min_width_10xl flex flex_column tablet:min_width_zero tablet:width_full mobile:min_width_zero mobile:width_full">
+   <h1 class="ui_heading h1 text_align_center text_bold">{{ t!("pages.bad_request.heading") }}</h1>
   </div>
  </div>
 {% endblock %}
