--- a/dev/system/auth/core/templates/reset_password_success.html
+++ b/dev/system/auth/core/templates/reset_password_success.html
@@ -3,12 +3,12 @@
 {% block title %}{{ t!("pages.reset_password_success.title") }}{% endblock %}
 
 {% block content %}
- <div class="flex_grow flex flex_column flex_align_center flex_justify_center padding_xl">
-  <div class="min_width_10xl flex flex_column">
-   <h1 class="ui_heading h1 text_align_center margin_bottom">{{ t!("pages.reset_password_success.heading") }}</h1>
-   <div class="ui_box surface radius_md padding_xl flex flex_column flex_gap_xl">
+ <div class="flex_grow flex flex_column flex_align_center flex_justify_center padding_xl mobile:padding_md">
+  <div class="min_width_10xl flex flex_column tablet:min_width_zero tablet:width_full mobile:min_width_zero mobile:width_full">
+   <div class="ui_box surface radius_md padding_4xl flex flex_column flex_align_center flex_gap_xl mobile:padding_2xl mobile:padding_vertical_3xl">
+    <h1 class="ui_heading h1 text_align_center text_bold">{{ t!("pages.reset_password_success.heading") }}</h1>
     <p>{{ t!("pages.reset_password_success.next") }}</p>
-    <a href="/auth/login" class="ui_button primary text_align_center">{{ t!("pages.reset_password_success.button.login") }}</a>
+    <a href="/auth/login" class="ui_button primary full_rounded width_7xl text_align_center">{{ t!("pages.reset_password_success.button.login") }}</a>
    </div>
   </div>
  </div>
