--- a/dev/system/auth/core/templates/verify_code.html
+++ b/dev/system/auth/core/templates/verify_code.html
@@ -3,24 +3,24 @@
 {% block title %}{{ t!("pages.verify_code.title") }}{% endblock %}
 
 {% block content %}
- <div class="flex_grow flex flex_column flex_align_center flex_justify_center padding_xl">
-  <div class="min_width_10xl flex flex_column">
-   <h1 class="ui_heading h1 text_align_center margin_bottom">{{ t!("pages.verify_code.heading") }}</h1>
-   <div class="ui_box surface radius_md padding_xl flex flex_column flex_gap_xl">
-    <form method="POST" action="/auth/verify_code" class="flex flex_column flex_gap_md">
+ <div class="flex_grow flex flex_column flex_align_center flex_justify_center padding_xl mobile:padding_md">
+  <div class="min_width_10xl flex flex_column tablet:min_width_zero tablet:width_full mobile:min_width_zero mobile:width_full">
+   <div class="ui_box surface radius_md padding_4xl flex flex_column flex_align_center flex_gap_xl mobile:padding_2xl mobile:padding_vertical_3xl">
+    <h1 class="ui_heading h1 text_align_center text_bold">{{ t!("pages.verify_code.heading") }}</h1>
+    <form method="POST" class="flex flex_column flex_gap_2xl flex_align_center max_width_8xl width_full" action="/auth/verify_code">
      <input type="hidden" name="token" value="{{ token }}">
      <span>{{ t!("pages.verify_code.form.caution") }}</span>
-     <label class="flex flex_column flex_gap_sm">
-      <span>{{ t!("pages.verify_code.form.code.label") }}</span>
-      <input type="text" name="code" class="ui_text_field">
+     <label class="flex flex_column flex_align_start width_full">
+      <span class="padding_horizontal_sm fs_sm">{{ t!("pages.verify_code.form.code.label") }}</span>
+      <input type="text" name="code" placeholder="{{ t!("pages.verify_code.form.code.placeholder") }}" class="ui_text_field width_full padding_horizontal_sm{% if input_error.code.is_some() %} is_error{% endif %}">
       {% if input_error.code.is_some() %}
-       <div class="ui_alert filled error">{{ input_error.code.as_ref().unwrap() }}</div>
+       <div class="color_error margin_top_sm">{{ input_error.code.as_ref().unwrap() }}</div>
       {% endif %}
      </label>
      {% if input_error.other.is_some() %}
-      <div class="ui_alert filled error">{{ input_error.other.as_ref().unwrap() }}</div>
+      <div class="color_erorr">{{ input_error.other.as_ref().unwrap() }}</div>
      {% endif %}
-     <button type="submit" class="ui_button primary text_align_center">{{ t!("pages.verify_code.form.button.submit") }}</button>
+     <button type="submit" class="ui_button primary full_rounded width_7xl text_align_center">{{ t!("pages.verify_code.form.button.submit") }}</button>
     </form>
    </div>
   </div>
