feat: Fix token refresh flow

--- a/dev/proto/ui_catalog/assets/scss/components/datas/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/datas/index.scss
@@ -2,6 +2,7 @@
 //	Data components
 //------------------------------------------------------------------------------
 
+@forward "avatar";
 @forward "badge";
 @forward "chip";
 @forward "code_block";
