--- a/dev/proto/ui_catalog/assets/scss/variables/sizes.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/sizes.scss
@@ -2,7 +2,7 @@
 //	Common sizes
 //------------------------------------------------------------------------------
 
-$sizes: "zero", "5xs", "4xs", "3xs", "2xs", "xs", "sm", "md", "lg", "xl", "2xl", "3xl", "4xl", "5xl", "6xl", "7xl", "8xl", "9xl", "10xl", "breakpoint-xs", "breakpoint-sm", "breakpoint-md", "breakpoint-lg", "breakpoint-xl";
+$sizes: "zero", "5xs", "4xs", "3xs", "2xs", "xs", "sm", "md", "lg", "xl", "2xl", "3xl", "4xl", "5xl", "6xl", "7xl", "8xl", "9xl", "10xl", "breakpoint-xs", "breakpoint-sm", "breakpoint-md", "breakpoint-lg", "breakpoint-xl", "avatar";
 
 :root
 {
@@ -30,4 +30,5 @@ $sizes: "zero", "5xs", "4xs", "3xs", "2xs", "xs", "sm", "md", "lg", "xl", "2xl",
 	--size-breakpoint-md: 900px;
 	--size-breakpoint-lg: 1200px;
 	--size-breakpoint-xl: 1536px;
+	--size-avatar: 40px;
 }
