feat: Feat account menu button

--- a/dev/proto/ui_catalog/assets/scss/common/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/common/index.scss
@@ -5,6 +5,7 @@
 @forward "border";
 @forward "display";
 @forward "flex";
+@forward "other";
 @forward "overflow";
 @forward "pointer_event";
 @forward "position";
