feat: Update aside component

--- a/dev/proto/ui_catalog/assets/scss/components/feedbacks/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/feedbacks/index.scss
@@ -3,6 +3,7 @@
 //------------------------------------------------------------------------------
 
 @forward "alert";
+@forward "backdrop";
 @forward "dialog";
 @forward "progress";
 @forward "skeleton";
