feat: Update profile card styles

--- a/dev/proto/ui_catalog/assets/scss/common/other.scss
+++ b/dev/proto/ui_catalog/assets/scss/common/other.scss
@@ -18,3 +18,8 @@
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
+
+@include responsive.responsive("object_fit_cover")
+{
+	object-fit: cover;
+}
