--- a/dev/proto/ui_catalog/assets/scss/components/datas/avatar.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/datas/avatar.scss
@@ -17,4 +17,5 @@
 	border-radius: var(--radius-circle);
 	border: 1px solid var(--color-border);
 	object-fit: cover;
+	background-color: var(--color-white);
 }
