fix: Change group avatar shape

--- a/dev/proto/ui_catalog/assets/scss/common/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/common/index.scss
@@ -9,6 +9,7 @@
 @forward "overflow";
 @forward "pointer_event";
 @forward "position";
+@forward "radius";
 @forward "size";
 @forward "spacer";
 @forward "typography";
