feat: Add group detail info table

--- a/dev/proto/ui_catalog/assets/scss/components/datas/table.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/datas/table.scss
@@ -234,4 +234,16 @@
 			left: 0;
 		}
 	}
+
+
+	//--------------------------------------------------------------------------
+	//	Minimized cell
+	//--------------------------------------------------------------------------
+	th.min,
+	td.min
+	{
+		text-align: center;
+		width: 1px;
+		white-space: nowrap;
+	}
 }
